src/objects/Transaction_Document__c.object
<CustomObject>
    <description>A junction between the Document and a transaction.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>Document_Type__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Status_Date__c</fullName>
        <label>Last Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction__c</fullName>
        <label>Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note_For_Revision__c</fullName>
        <label>Note For Revision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Revision</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction Document</label>
    <nameField>
        <label>Transaction Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Doc_Type_required_on_mode_selection</fullName>
        <active>true</active>
        <description>If the mode is Required or Optional then a document type is mandatory.</description>
        <errorConditionFormula>AND( Document_Type__c == NULL, OR( ISPICKVAL(Mode__c , &apos;Required&apos;), ISPICKVAL(Mode__c , &apos;Optional&apos;) ))</errorConditionFormula>
        <errorMessage>Document Type is required if mode is set to &apos;Required&apos; or &apos;Optional&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_required_if_returned_for_revision</fullName>
        <active>true</active>
        <description>A note is required if the status of the transaction document is set to &quot;Returned for Revision&quot;.</description>
        <errorConditionFormula>AND(
AND(
ISPICKVAL( Status__c , &apos;Returned for Revision&apos;),
Note_For_Revision__c == NULL
),
ISPICKVAL(PRIORVALUE(Status__c ), &apos;Returned for Revision&apos;)
)</errorConditionFormula>
        <errorMessage>A note is required if the Transaction Document&apos;s is in need of a revision.</errorMessage>
    </validationRules>
</CustomObject>